<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>
    <!-- Title of the Terminal activity. -->
    <string name="app_label">Terminal</string>

    <string name="menu_new_tab">New tab</string>
    <string name="menu_close_tab">Close tab</string>

    <string name="menu_item_settings">Settings</string>

    <string name="settings">Settings</string>

    <string name="screen_settings">Screen settings</string>
    <string name="fullscreen_mode">Fullscreen mode</string>
    <string name="fullscreen_mode_summary">Fullscreen mode</string>
    <string name="screen_orientation">Screen orientation</string>
    <string name="screen_orientation_title">Screen orientation</string>

    <string name="text_settings">Text settings</string>
    <string name="font_size">Font size</string>
    <string name="font_size_title">Font size</string>
    <string name="text_colors">Text colors</string>
    <string name="text_colors_title">Text colors</string>

</resources>
