<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (c) 2014, The Linux Foundation. All rights reserved.
     Not a Contribution.

     Copyright (C) 2009 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/menu_item_settings">
    <PreferenceCategory
        android:title="@string/screen_settings">
        <SwitchPreference
            android:key="fullscreen_mode"
            android:title="@string/fullscreen_mode_title"
            android:defaultValue="false" />
        <ListPreference
            android:key="screen_orientation"
            android:title="@string/screen_orientation_title"
            android:dialogTitle="@string/screen_orientation_title"
            android:entries="@array/screen_orientation_labels"
            android:entryValues="@array/screen_orientation_values" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/text_settings">
        <ListPreference
            android:key="font_size"
            android:title="@string/font_size_title"
            android:dialogTitle="@string/font_size_title"
            android:entries="@array/font_size_labels"
            android:entryValues="@array/font_size_values"
            android:defaultValue="12" />
        <ListPreference
            android:key="text_colors"
            android:title="@string/text_colors_title"
            android:dialogTitle="@string/text_colors_title"
            android:entries="@array/text_colors_labels"
            android:entryValues="@array/text_colors_values"
            android:defaultValue="white/black" />
    </PreferenceCategory>
    <!-- Keyboard category -->
    <!-- Shell category -->
</PreferenceScreen>
